// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`install (integration) > should install git hooks after manually running commitlint-config command > commit-msg 1`] = `
"#!/bin/sh
npm exec commitlint -- --edit "$1""
`;

exports[`install (integration) > should install git hooks after manually running commitlint-config command > pre-commit 1`] = `
"#!/bin/sh
npm exec lint-staged -- --config "<tempDir>/node_modules/@forsakringskassan/commitlint-config/lint-staged.js" "$@""
`;

exports[`install (integration) > should install git hooks after manually running commitlint-config command > stdout 1`] = `
"Writing <tempDir>/.git/hooks/pre-commit
Writing <tempDir>/.git/hooks/commit-msg
git config commit.template node_modules/@forsakringskassan/commitlint-config/gitmessage
"
`;
